--- a/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
+++ b/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
@@ -49,3 +49,25 @@
 \newcommand{\Heap}{\textit{dynamic storage duration}-Bereich}
 \newcommand{\Static}{\textit{static storage duration}-Bereich}
 \newcommand{\STL}{\textit{Standard Template Library}}
+
+
+
+\newcommand{\ROS}{\textit{ROS}}
+\newcommand{\Quad}[1][]{Quadrokopter#1}
+\newcommand{\COEX}{\textit{COEX}}
+\newcommand{\Clover}{\textit{Clover 4.20}}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
