--- a/Ausarbeitung/211008_MM_T3100_Hardware.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware.tex
@@ -1,4 +1,7 @@
-\newSec[HW]{Betrachtung der Hardware}{1}
+\newSec[HW]{Eingesetzte der Hardware}{1}
 
+Bei dem für die \DHBW\ neu angeschafften \Quad\ handelt es sich um das Modell \Clover\ des Unternehmens \textit{Copter Express} (\COEX).
+
+Das Modell \Clover wurde vom Hersteller zur Ausbildung und Forschung an \Quad[n] entwickelt. Das Modell besitzt einen Rahmen, welche die Rotoren bei Kollisionen schützten soll.
 
 
