--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -18,12 +18,15 @@
 
 \begin{thebibliography}{\theIndexLiteratur}
 
-%Bücher
+% Paper
 \NewBibItem{Paper1}{Pozo D., Romero L., Rosales J., Quadcopter stabilization by using PID controllers}
 \Published{2014}
 
 \NewBibItem{Paper2}{Fresk E., Nikolakopoulos G., Full Quaternion Based Attitude Control for a Quadrotor}
 \Published{19.07.2013}
+
+
+% Bücher
 
 
 
@@ -32,6 +35,11 @@
 
 
 
+
+% Problemstellung
+\NewBibItem{Ballon}{ellwangen2010, Ballon steuern?}
+\Online{https://www.ballonfahrten.com/ballon-steuern/}
+\Published{20.02.2010}, \Requested{07.11.2021}
 
 
 
