--- a/Ausarbeitung/211008_MM_T3100_Methodik.tex
+++ b/Ausarbeitung/211008_MM_T3100_Methodik.tex
@@ -2,3 +2,11 @@
 
 
 
+
+Analyse des Systems „Drohne“ (Geometrie, Regel- und Messgrößen)
+Analyse möglicher Messgrößen (Beschleunigungssensorik, evtl. Bilddaten)
+Modellierung des Regelsystems
+Entwurf eines geeigneten Reglers
+Implementierung des entworfenen Reglers
+Testen und optimieren der Regelparameter
+
