Added Text ROS.tex

--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -43,13 +43,12 @@
 
 
 
-% Unternehmen
+% ROS
+\NewBibItem{ros1}{ROS - Robot Operating System}
+\Online{https://www.ros.org}
+\Published{\NA}, \Requested{28.11.2021}
 
 
-% MCU
-
-
-%STM32
 
 
 
