--- a/Ausarbeitung/211008_MM_T3100_ROS.tex
+++ b/Ausarbeitung/211008_MM_T3100_ROS.tex
@@ -1,4 +1,8 @@
 \newSec{ROS}{1}
 
+Das \textit{Robot Operating System} (\ROS\) ist eine \texitit{Open Source} Bibliothek, welche dem Nutzer eine modulare Architektur ermögicht.
+Hierbei kommunizieren \textit{Nodes} mittels \textit{Messages} miteinander.\vgl{ros1}
+
+Nachfolgend sollen die \Ros-Komponenten näher betrachtet werden.
 
 
