wip on Documentation...

--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -40,7 +40,7 @@
 \PagestyleStdContent
 
 
-\input{211008_MM_T3100_Einleitung.tex}							% Section
+\input{211008_MM_T3100_Einleitung.tex}						% Section
 \clearpage
 \input{211008_MM_T3100_Problemstellung.tex}					% Section
 \clearpage
@@ -70,11 +70,7 @@
 
 \clearpage
 \input{211008_MM_T3100_ROS.tex}							% Section
-\input{211008_MM_T3100_ROS - Core.tex}							% SubSection
-\input{211008_MM_T3100_ROS - Node.tex}							% SubSection
-\input{211008_MM_T3100_ROS - Topic.tex}							% SubSection
-\input{211008_MM_T3100_ROS - Service.tex}						% SubSection
-\input{211008_MM_T3100_ROS - Make.tex}							% SubSection
+
 
 
 
@@ -82,7 +78,7 @@
 
 
 \clearpage
-\input{211008_MM_T3100_Regelsystem.tex}					% Section
+\input{211008_MM_T3100_Regelsystem.tex}						% Section
 
 
 
@@ -92,6 +88,16 @@
 \clearpage
 \input{211008_MM_T3100_Positionsregelung.tex}					% Section
 \input{211008_MM_T3100_Positionsregelung Accel.tex}					% SubSection
+
+
+\clearpage
+\input{211008_MM_T3100_Hardware - Aufbau.tex}				% Section
+
+
+\clearpage
+\input{211008_MM_T3100_ROS - Topic.tex}						% Section
+
+
 
 \clearpage
 \input{211008_MM_T3100_Architektur.tex}						% Section
