--- a/Ausarbeitung/211008_MM_T3100_ROS - Topic.tex
+++ b/Ausarbeitung/211008_MM_T3100_ROS - Topic.tex
@@ -1,14 +1,4 @@
-\newSec[Topic]{ROS-Topic}{2}
-
-
-
-
-
-
-\newSec{Subscriber}{3}
-
-
-\newSec{Publisher}{3}
+\newSec[Topic]{Analyse der verfügbaren ROS-Topics}{1}
 
 
 
@@ -18,3 +8,32 @@
 
 
 
+
+
+
+
+
+
+
+
+
+\newSec[MavROS]{mavros als Abstraktionsebene}{2}
+
+\textit{mavros} ist eine Bibliothek, welche allgemein für Fluggeräte mit 4 Freiheitsgraden erstellt wurde. Zusätzlich können verschiedene Sensordaten übermittelt werden.
+
+
+
+
+
+
+
+
+\newSec[Msgs]{ROS-Messages}{3}
+
+
+
+
+
+
+
+\newSec[Topics]{ROS-Topics}{3}
