--- a/Ausarbeitung/211008_MM_T3100_ROS.tex
+++ b/Ausarbeitung/211008_MM_T3100_ROS.tex
@@ -1,8 +1,16 @@
 \newSec{ROS}{1}
 
-Das \textit{Robot Operating System} (\ROS\) ist eine \texitit{Open Source} Bibliothek, welche dem Nutzer eine modulare Architektur ermögicht.
+Das \textit{Robot Operating System} (\ROS) ist eine \textit{Open Source} Bibliothek, welche dem Nutzer eine modulare Architektur ermögicht.
 Hierbei kommunizieren \textit{Nodes} mittels \textit{Messages} miteinander.\vgl{ros1}
 
-Nachfolgend sollen die \Ros-Komponenten näher betrachtet werden.
+
+Die \ROS\ Versionen werden jeweils mit Namen versehen, wobei die Anfangsbuchstaben der Versionen der alphabetischen Nummerierung entsprechen. In diesem Projekt wurde die aktuellste \ROS-Version \textit{noetic} eingesetzt.
+
+
+Die \ROS\textit{-Nodes} wurden mittels \textit{catkin} compiliert.
+
+
+
+
 
 
