--- a/Ausarbeitung/211008_MM_T3100_Quadrokopter.tex
+++ b/Ausarbeitung/211008_MM_T3100_Quadrokopter.tex
@@ -2,3 +2,33 @@
 
 
 
+
+
+
+
+\newSec{Geometrien}{2}
+
+
+\newSec[Plus]{\textbf{+}-Anordnung}{2}
+
+
+
+\newSec[X]{\textbf{x}-Anordnung}{2}
+
+
+
+
+
+\newSec{Freiheitsgrade}{2}
+
+
+
+
+6 Freiheitsgrade, tatsächlich 4 individuell regelbar.
+
+
+
+
+
+
+
