--- a/Ausarbeitung/211008_MM_T3100_Hardware.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware.tex
@@ -1,4 +1,4 @@
-\newSec[HW]{Eingesetzte der Hardware}{1}
+\newSec[HW]{Eingesetzte Hardware}{1}
 
 Bei dem für die \DHBW\ neu angeschafften \Quad\ handelt es sich um das Modell \Clover\ des Unternehmens \textit{Copter Express} (\COEX).
 
