--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -94,8 +94,14 @@
 
 \clearpage
 \input{211008_MM_T3100_Architektur.tex}						% Section
-
-
+\input{211008_MM_T3100_Architektur - Abstraction.tex}				% SubSection
+\input{211008_MM_T3100_Architektur - Domain.tex}					% SubSection
+\input{211008_MM_T3100_Architektur - Application.tex}				% SubSection
+\input{211008_MM_T3100_Architektur - Adapter.tex}					% SubSection
+\input{211008_MM_T3100_Architektur - Plugin.tex}					% SubSection
+\input{211008_MM_T3100_Architektur - Plugin calling.tex}					% SubSubSection
+\input{211008_MM_T3100_Architektur - Plugin threading.tex}				% SubSubSection
+\input{211008_MM_T3100_Architektur - Plugin coex.tex}					% SubSubSection
 
 
 
