--- a/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
+++ b/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
@@ -57,8 +57,8 @@
 \newcommand{\COEX}{\textit{COEX}}
 \newcommand{\Clover}{\textit{Clover 4.20}}
 
-
-
+\newcommand{\clean}{\textit{Clean Archirecture}}
+\newcommand{\VO}{\textit{Value-Object}}
 
 
 
