Added Content of PluginLayer coex
Additionally added Commands for in-Text Code Style

--- a/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
+++ b/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
@@ -53,6 +53,11 @@
 
 
 \newcommand{\ROS}{\textit{ROS}}
+\newcommand{\Node}[1][]{\textit{ROS-Node#1}}
+\newcommand{\Topic}[1][]{\textit{ROS-Topic#1}}
+\newcommand{\Service}[1][]{\textit{ROS-Service#1}}
+
+
 \newcommand{\Quad}[1][]{Quadrokopter#1}
 \newcommand{\COEX}{\textit{COEX}}
 \newcommand{\Clover}{\textit{Clover 4.20}}
