--- a/Ausarbeitung/211008_MM_T3100_Architektur - Abstraction.tex
+++ b/Ausarbeitung/211008_MM_T3100_Architektur - Abstraction.tex
@@ -5,35 +5,36 @@ Der \textit{Abstraction Layer} stellt als Teil der \clean\ die Ebene dar, in der
 
 
 \newSec{Optional}{4}
-Die Klasse \textit{Optional} soll dem Ringbuffer ermöglichen, das Nichtvorhandensein von Einträgen darstellen zu können. Diese Klasse ist als \textit{template} implementiert und enthält neben dem Speicherplatz für die generische Instanz einen bool'schen Wert als Validierung.
-Hiermit wird das Arbeit mit \textit{Null-pointern} im Kontext desr Klasse \textit{Ringbuffer} vermieden.
+Die Klasse \CodeClass{Optional} soll dem Ringbuffer ermöglichen, das Nichtvorhandensein von Einträgen darstellen zu können. Diese Klasse ist als \textit{template} implementiert und enthält neben dem Speicherplatz für die generische Instanz einen bool'schen Wert als Validierung.
+Hiermit wird das Arbeit mit \textit{Null-pointern} im Kontext desr Klasse \CodeClass{Ringbuffer} vermieden.
 
 
 \newSec{Ringbuffer}{4}
-Die Klasse \textit{Ringbuffer} soll einen Ringspeicher abbilden. Hier wird nicht -wie ner Name vermuten lässt- ein Ringspeicher im SInne einer ringförmig verketteten Liste implementiert. Diese Klasse Kapselt einen \textit{STL} vom Typ \textit{std::vector<T>}, wobei bei Überschreiten der maximalen Anzahl an Elementen das vordere Elemente entfernt wird.
-\note{Die Implementierung der Klasse \textit{std::vector<T>} sieht vor, neue Elemente an das Ende anzuhängen.}
-Bei der Klasse \textit{Ringbuffer} handelt es sich nicht im ein \VO, da \missing[bitte begründen ;)].
+Die Klasse \CodeClass{Ringbuffer} soll einen Ringspeicher abbilden. Hier wird nicht -wie ner Name vermuten lässt- ein Ringspeicher im SInne einer ringförmig verketteten Liste implementiert. Diese Klasse Kapselt eine \textit{Standard Template Library} (\textit{STL}) vom Typ \CodeClass{std::vector<T>}, wobei bei Überschreiten der maximalen Anzahl an Elementen das vordere Elemente entfernt wird.
+
+\note{Die Implementierung der Klasse \CodeClass{std::vector<T>} sieht vor, neue Elemente an das Ende anzuhängen.}
+Bei der Klasse \CodeClass{Ringbuffer} handelt es sich nicht im ein \VO, da \missing[bitte begründen ;)].
 
 
 \newSec{TimedValue}{4}
-Die Klasse \textit{TimedValue} soll einen mit einem Zeitstemlep versehenen Wert abbilden. Dies wird durch das Erben von den Klassen \textit{Timestamp} und \textit{Value} umgesetzt.
+Die Klasse \CodeClass{TimedValue} soll einen mit einem Zeitstemlep versehenen Wert abbilden. Dies wird durch das Erben von den Klassen \textit{Timestamp} und \CodeClass{Value} umgesetzt.
 
 
 
 \newSec{Timestamp}{4}
-Mit der Klasse \textit{Timestamp} wird ein Zeitstempel eingeführt. Alle \ROS-Nachrichten beinhalten durch die Kapselung der \textit{std\_msgs::Header}-Klasse einen Zeitstempel.
+Mit der Klasse \CodeClass{Timestamp} wird ein Zeitstempel eingeführt. Alle \ROS-Nachrichten beinhalten durch die Kapselung der \CodeClass{std\_msgs::Header}-Klasse einen Zeitstempel.
 
 
 \newSec{Unit}{4}
-Mit \textit{Unit} werden Einheiten umgesetzt, um eine korrekte Übergabe von \textit{Value}-Instanzen zur Laufzeit zu gewährleisten.
+Mit \CodeClass{Unit} werden Einheiten umgesetzt, um eine korrekte Übergabe von \CodeClass{Value}-Instanzen zur Laufzeit zu gewährleisten.
 
 
 \newSec{Value}{4}
-Die Klasse \textit{Value} bildet einen Wert ab. Sie besteht aus einer \textit{Unit} und einem dazugehöigen Zahlenwert.
+Die Klasse \CodeClass{Value} bildet einen Wert ab. Sie besteht aus einer \CodeClass{Unit} und einem dazugehöigen Zahlenwert.
 
 
 \newSec{Vector3D}{4}
-Bei der Klasse \textit{Vector3D} handelt es sich um die Abbildung eines Vektors im dreidimensionalen Raum. Zusätzlich wird dem Vektor eine Einheit zugewiesen.
+Bei der Klasse \CodeClass{Vector3D} handelt es sich um die Abbildung eines Vektors im dreidimensionalen Raum. Zusätzlich wird dem Vektor eine Einheit zugewiesen.
 Zudem werden in dieser Klasse grundlegende mathematische Operationen für Vektoren implementiert.
 
 
