--- a/Ausarbeitung/211008_MM_T3100_Architektur - Plugin coex.tex
+++ b/Ausarbeitung/211008_MM_T3100_Architektur - Plugin coex.tex
@@ -4,3 +4,14 @@
 
 
 
+\newSec{coexBattery}{4}
+\newSec{coexControl}{4}
+\newSec{coexMC}{4}
+\newSec{coexOrientation}{4}
+\newSec{coexRC}{4}
+\newSec[coexRCR]{coexRC\_Receiver}{4}
+\newSec[coexRCT]{coexRC\_Transmitter}{4}
+\newSec{coexState}{4}
+\newSec{coexTransmitable}{4}
+\newSec{Joystick}{4}
+\newSec{JoystickAxis}{4}
