Added some Content

--- a/Ausarbeitung/211008_MM_T3100_Architektur.tex
+++ b/Ausarbeitung/211008_MM_T3100_Architektur.tex
@@ -3,4 +3,23 @@
 
 
 
+\begin{figure}[ht!]
+\vspace{0.25cm}
+\begin{center}
+\fbox{\includegraphics[height=20cm]{Pictures/Clean Architecture.png}}
+\caption{Architektur des Positionsregelungssystems}
+\label{fig:CArch}
+\end{center}
+
+\vspace{0.25cm}
+\refImgShort{fig:CArch} zeigt die Architektur der Implementierung. Hierbei wurde die \clean\ zu Grunde gelegt.
+\end{figure}
+
+
+
+
+
+
+
+
 
