--- a/Ausarbeitung/211008_MM_T3100_Einleitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Einleitung.tex
@@ -3,9 +3,9 @@
 
 \vspace{1cm}
 \begin{center}
-\textbf{\grqq Zitattext\grqq}\\
+\textbf{\grqq Über den Wolken muss die Freiheit wohl grenzenlos sein.\grqq}\\
 \vspace{0.5cm}
- \cite{Einl1}
+aus dem Lied \textit{Über den Wolken} von Reinhard Mey, 1973 \cite{Einl1}
 \end{center}
 \vspace{1cm}
 
@@ -14,16 +14,18 @@
 
 
 
+Menschen sehnten sich seit jeher, fliegen zu können.
+\missing[irgendwas mit Ikarus]
+
+
+\missing[Erste motorisierte Flüge - 1903 Gebrüder Wright]
 
 
 
 
+Dronen als zukünfiges Verfehkrsmittel für kurzstreckentransporte
 
-
-
-Dronen als zukünfiges Vwrfehkrsmittel für kurzstreckentransporte
-
-Dronen auf dem Mars (2018?)
+Dronen auf dem Mars, Ingenuity Feb 2021
 
 
 
