--- a/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
+++ b/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
@@ -51,16 +51,10 @@
 \newcommand{\STL}{\textit{Standard Template Library}}
 
 
-
-\newcommand{\ROS}{\textit{ROS}}
-\newcommand{\Node}[1][]{\textit{ROS-Node#1}}
-\newcommand{\Topic}[1][]{\textit{ROS-Topic#1}}
-\newcommand{\Service}[1][]{\textit{ROS-Service#1}}
-
-
 \newcommand{\Quad}[1][]{Quadrokopter#1}
 \newcommand{\COEX}{\textit{COEX}}
 \newcommand{\Clover}{\textit{Clover 4.20}}
+\newcommand{\Pie}{\textcolor{Raspberry}{\textit{Raspberry Pie 4}}}
 
 \newcommand{\clean}{\textit{Clean Archirecture}}
 \newcommand{\VO}{\textit{Value-Object}}
