--- a/Ausarbeitung/211008_MM_T3100_Hardware - Aufbau.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Aufbau.tex
@@ -1,4 +1,4 @@
-\newSec[Building]{Aufbau des Bausatzes}{1}
+\newSec[Build]{Aufbau des Bausatzes}{1}
 
 
 
@@ -21,12 +21,3 @@
 
 
 
-\newSec[BuildTrouble]{Troubleshooting}{2}
-
-
-\newSec{Platinenfehler}{3}
-
-
-
-
-\newSec{Bus-System des RC Empfängers}{3}
