--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -32,6 +32,12 @@
 
 
 % Einleitung
+\NewBibItem{Einl1}{Mey R., Reinhard Mey Textsammlung 14.Auflage}
+\Online{https://www.reinhard-mey.de/texte-fuer-alle/}
+\Published{13.12.2017}, \Requested{08.02.2022}
+
+
+
 
 
 
