--- a/Ausarbeitung/211008_MM_T3100_Regelsystem.tex
+++ b/Ausarbeitung/211008_MM_T3100_Regelsystem.tex
@@ -2,7 +2,8 @@
 
 
 
-
+Evtl Norm „IEC 60050-351 Internationales Elektrotechnisches Wörterbuch – Teil 351: Leittechnik“ zitieren, auf jeden Fall als Grundlage heranziehen.
++ Vorlesung Regelungstechnik von Studium MB13VT
 
 
 
