--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -13,6 +13,7 @@
 \begin{document}
 \input{DefaultContent/200803_Default_Functions - Shortcuts2.tex}
 \input{211008_MM_T3100_Functions - Shortcuts2.tex}
+\input{211008_MM_T3100_Functions - ros.tex}
 \PagestyleStdPre
 
 % Default Content
@@ -83,10 +84,11 @@
 
 \clearpage
 \input{211008_MM_T3100_Hardware - Aufbau.tex}				% Section
-
+\input{211008_MM_T3100_Hardware - Aufbau - Troubleshooting.tex}		% SubSection
 
 \clearpage
 \input{211008_MM_T3100_ROS - Topic - Analyse.tex}				% Section
+\input{211008_MM_T3100_ROS - Topic - Troubleshooting.tex}			% SubSection
 
 
 
