--- a/Ausarbeitung/211008_MM_T3100_ROS - Topic - Troubleshooting.tex
+++ b/Ausarbeitung/211008_MM_T3100_ROS - Topic - Troubleshooting.tex
@@ -18,12 +18,29 @@ https://clover.coex.tech/en/mavros.html
 Freigegebene \Topic[s] in \texttt{mavros.launch}
 
 \begin{lstlisting}[style=Style_XML, numbers=none, caption={[Freigegebene Topics] Freigegebene \Topic[s] in \texttt{mavros.launch}}]
-<xml>
-	<lol Param= "Value">
-	</lol>
-	
-	
-</xml>
+<rosparam param="plugin_whitelist">
+	- altitude
+	- command
+	- distance_sensor
+	- ftp
+	- global_position
+	- imu
+	- local_position
+	- manual_control
+	# - mocap_pose_estimate
+	 - param
+	 - px4flow
+	 - rc_io
+	 - setpoint_attitude
+	- setpoint_position
+	- setpoint_raw
+	- setpoint_velocity
+	- sys_status
+	- sys_time
+	- vision_pose_estimate
+	# - vision_speed_estimate
+	# - waypoint
+</rosparam>
 \end{lstlisting}
 
 
