Added some Topic-Descritions

--- a/Ausarbeitung/211008_MM_T3100_ROS - Topic - Troubleshooting.tex
+++ b/Ausarbeitung/211008_MM_T3100_ROS - Topic - Troubleshooting.tex
@@ -94,7 +94,7 @@ von dem \Pie\ kopieren und in der Definition des lokalen \ROS\ \textit{\mbox{Ove
 
 
 
-\newSec[TopicTroubleRCOver]{Topics setpoint_altitude/thrust läuft nicht}{3}
+\newSec[TopicTroubleRCOver]{Topics setpoint\_altitude/thrust läuft nicht}{3}
 
 
 
