Updated Content due to Hardware-Change
Now using Parrot AR.Dohne 2.0

--- a/Ausarbeitung/211008_MM_T3100_ROS - Topic - Analyse.tex
+++ b/Ausarbeitung/211008_MM_T3100_ROS - Topic - Analyse.tex
@@ -156,7 +156,7 @@ Channel-Belegung wie \Topic{/mavros/rc/in}.
 
 \newSec[TopicImuData]{/mavros/imu/data}{4}
 Sendet Lage und Beschleunigungsdaten.\\
-Typ: sensor_msgs::Imu \\
+Typ: sensor\_msgs::Imu \\
 orientation: Winkel um die Achsen $[°]$\\
 angular\_velocity: Geschwindigkeit entlang der Achsen $[m/s]$\\
 linear\_acceleration: Beschleunigung entlang der Achsen $[m/s²]$
