--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -61,10 +61,8 @@
 
 \clearpage
 \input{211008_MM_T3100_Hardware.tex}						% Section
-\input{211008_MM_T3100_Hardware - Geometry.tex}					% SubSection
-\input{211008_MM_T3100_Hardware - Sensoric.tex}					% SubSection
-\input{211008_MM_T3100_Hardware - Controls.tex}					% SubSection
-\input{211008_MM_T3100_Hardware - Funk.tex}						% SubSection
+\input{211008_MM_T3100_Hardware - COEX.tex}						% SubSection
+\input{211008_MM_T3100_Hardware - Parrot.tex}					% SubSection
 
 
 
@@ -82,9 +80,6 @@
 \input{211008_MM_T3100_Positionsregelung Accel.tex}					% SubSection
 
 
-\clearpage
-\input{211008_MM_T3100_Hardware - Aufbau.tex}				% Section
-\input{211008_MM_T3100_Hardware - Aufbau - Troubleshooting.tex}		% SubSection
 
 \clearpage
 \input{211008_MM_T3100_ROS - Topic - Analyse.tex}				% Section
