Edited some Chapters

--- a/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
+++ b/Ausarbeitung/211008_MM_T3100_Functions - Shortcuts.tex
@@ -56,6 +56,10 @@
 \newcommand{\Clover}{\textit{Clover 4.20}}
 \newcommand{\Pie}{\textcolor{Raspberry}{\textit{Raspberry Pie 4}}}
 
+\newcommand{\Parrot}{\textit{Parrot}}
+\newcommand{\Ar}{\textit{ArDrone 2.0}}
+
+
 \newcommand{\clean}{\textit{Clean Archirecture}}
 \newcommand{\VO}{\textit{Value-Object}}
 
