--- a/Ausarbeitung/211008_MM_T3100_Functions - ros.tex
+++ b/Ausarbeitung/211008_MM_T3100_Functions - ros.tex
@@ -4,7 +4,7 @@
 \newcommand{\Topic}[1][]{\textit{ROS-Topic#1}}
 \newcommand{\Service}[1][]{\textit{ROS-Service#1}}
 
-\newcommand{\rTopic}[1]{\Topic \texttt{\textcolor{magenta}{#1}}}
+\newcommand{\rTopic}[1]{\Topic\ \texttt{\textcolor{magenta}{#1}}}
 
 
 
