--- a/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
@@ -1,6 +1,12 @@
 \newSec[HWParrot]{Parrot Drohne}{2}
 
-Um die Problematik der COEX Drohne zu umgehen, steigt diese Arbeit auf die Drohne um, welche die Idee für diese Studienarbeit ergeben hat.
+Um die Problematik der COEX Drohne zu umgehen, steigt diese \Arbeit\ auf die Drohne um, welche die Idee für diese Studienarbeit ergeben hat.
+Hierbei handelt es sich um die Drohne \Ar. Nachfolgend soll die Drohne und die eingebaute Sensorik näher bechrieben werden.
+
+
+
+
+
 
 Parrot AR.Drohne 2.0
 
@@ -48,6 +54,10 @@ X
 
 
 
+\missing[Drohne ist nur Client]
+
+\missing[Nutzung von ardrone\_autonomy-Package]
+
 
 
 
@@ -72,8 +82,6 @@ X
 
 
 \newSec{Frontkamera}{4}
-
-
 
 
 
