--- a/Ausarbeitung/211008_MM_T3100_Info - Autor.tex
+++ b/Ausarbeitung/211008_MM_T3100_Info - Autor.tex
@@ -33,3 +33,8 @@
 \underline{\hspace{5cm}} \> \underline{\hspace{5cm}}\\
 \AutorStadt, \AusarbeitungAbgabeDatum \> Unterschrift
 \end{tabbing}}
+
+
+
+
+\newcommand{\Arbeit}{Projektarbeit}
