--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -54,6 +54,12 @@
 \Online{https://www.ros.org}
 \Published{\NA}, \Requested{28.11.2021}
 
+\NewBibItem{rosVersion}{ROS Indigo Igloo}
+\Online{http://wiki.ros.org/indigo}
+\Published{\NA}, \Modified{08.01.2018}, \Requested{16.03.2022}
+
+
+
 
 
 
@@ -65,6 +71,21 @@
 
 
 %Software
+
+
+
+
+
+%COEX
+\NewBibItem{coexExample}{MAVROS Offboard control example}
+\Online{https://docs.px4.io/master/en/ros/mavros\_offboard.html}
+\Published{\NA}, \Modified{02.02.2021}, \Requested{16.03.2022}
+
+
+
+
+
+
 
 
 %Language
