--- a/Ausarbeitung/211008_MM_T3100_Quadrokopter.tex
+++ b/Ausarbeitung/211008_MM_T3100_Quadrokopter.tex
@@ -7,14 +7,24 @@
 
 
 \newSec{Geometrien}{2}
+Die Rotoren von Drohnen können in zwei verschiedenen Anordnungen angebracht werden. in diesem Kapitel sollen diese Anordnung näher beschrieben werden.
+
+
+
 
 
 \newSec[Plus]{\textbf{+}-Anordnung}{3}
 
 
 
-\newSec[X]{\textbf{x}-Anordnung}{3}
 
+\missing[für roll und pitch wird die Drehzahl die Rotoren auf der jeweiligen Achse entgegengesetzt manipuliert.]
+\missing[für eine Drehung um die z-Achse werden die Rotoren der x- und y-Achse entgegengesetzt manipuliert.]
+
+
+
+\newSec[X]{\textbf{x}-Anordnung}{3}
+\missing\
 
 
 
@@ -26,7 +36,7 @@
 
 6 Freiheitsgrade, tatsächlich 4 individuell regelbar.
 
-
+\missing[Bild der Kräfte an der Drohne, wenn diese aus der horizontalen Ebene geneigt ist.]
 
 
 
