--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -11,6 +11,7 @@
 \newcommand{\Version}[1]{#1. Auflage}
 \newcommand{\ISBN}[1]{ISBN #1}
 \newcommand{\Article}[1]{Artikel \textit{#1}}
+\newcommand{\Chapter}[1]{Kapitel \textit{#1}}
 \newcommand{\Pages}[1]{Seite #1}
 \newcommand{\NA}{-unbekannt-}
 
@@ -80,6 +81,19 @@
 \NewBibItem{coexExample}{MAVROS Offboard control example}
 \Online{https://docs.px4.io/master/en/ros/mavros\_offboard.html}
 \Published{\NA}, \Modified{02.02.2021}, \Requested{16.03.2022}
+
+
+
+
+
+
+%Parrot
+\NewBibItem{parotSDK}{AR.Drone Developer Guide}
+\Chapter{AR.Drone 2.0 Overview}, \Pages{5 ff.}
+\Online{https://jpchanson.github.io/ARdrone/ParrotDevGuide.pdf}
+\Published{21.05.2012}, \Requested{17.03.2022}
+
+
 
 
 
