--- a/Ausarbeitung/211008_MM_T3100_Methodik.tex
+++ b/Ausarbeitung/211008_MM_T3100_Methodik.tex
@@ -2,6 +2,7 @@
 
 
 
+\missing\
 
 Analyse des Systems „Drohne“ (Geometrie, Regel- und Messgrößen)
 Analyse möglicher Messgrößen (Beschleunigungssensorik, evtl. Bilddaten)
@@ -9,4 +10,25 @@ Modellierung des Regelsystems
 Entwurf eines geeigneten Reglers
 Implementierung des entworfenen Reglers
 Testen und optimieren der Regelparameter
+
+
+
+
+\newSec{Begriffe}{2}
+In diesem Kapitel sollen Begrifflichkeiten definiert werden, welche im allgemeinen Sprachgebrauch mehrdeutig belegt sind.
+
+
+
+
+
+\missing\
+
+\begin{tabbing}
+\hspace{8cm} \= \kill
+Drohne \> \Quad\
+
+
+
+
+\end{tabbing}
 
