--- a/Ausarbeitung/211008_MM_T3100_Regelsystem.tex
+++ b/Ausarbeitung/211008_MM_T3100_Regelsystem.tex
@@ -7,6 +7,13 @@ Evtl Norm „IEC 60050-351 Internationales Elektrotechnisches Wörterbuch – Te
 
 
 
+\newSec{Regelkreis}{2}
+
+
+
+
+
+
 
 
 \newSec[Regelerarten]{Arten von Reglern}{2}
